group = 'com.nablarch.framework'
version = '1.2.0'
description = 'ビーンユーティリティ'

buildscript {
  repositories {
    mavenLocal()
    maven { url "${developLibUrl}" }
    jcenter()
  }
  dependencies {
    classpath "com.nablarch.dev:nablarch-gradle-plugin:${nablarchGradlePluginVersion}"
    classpath "net.saliman:gradle-cobertura-plugin:${coberturaPluginVersion}"
  }
}

apply plugin: 'com.nablarch.dev.nablarch-build'
apply plugin: 'com.nablarch.dev.nablarch-maven-deploy'
apply plugin: 'com.nablarch.dev.nablarch-sonarqube'
apply plugin: 'com.nablarch.dev.nablarch-version'
apply from: 'https://github.com/nablarch/nablarch-gradle-plugin/blob/develop/scripts/cobertura/cobertura-0.0.1.gradle?raw=true'

// ビルド時のJavaバージョンを指定する
sourceCompatibility=JavaVersion.VERSION_1_6
targetCompatibility=JavaVersion.VERSION_1_6

configurations {
  testCompile.exclude group:'*', module: 'hamcrest-core'
  all*.exclude module: 'nablarch-test-support-hereis'
  all*.exclude module: 'h2'
  all*.exclude module: 'commons-dbcp'
  all*.exclude module: 'eclipselink'
  all*.exclude module: 'jsp-api-2.1-glassfish'
}

dependencies {
  compile "com.nablarch.framework:nablarch-core:${nablarchCoreVersion}"

  testCompile "com.nablarch.framework:nablarch-core-applog:${nablarchCoreApplogVersion}"
  testCompile "com.nablarch.framework:nablarch-core-repository:${nablarchCoreRepositoryVersion}"

  testCompile 'org.jmockit:jmockit:1.30'
  testCompile 'junit:junit:4.12'
  testCompile 'org.hamcrest:hamcrest-all:1.3'
}

test {
  jvmArgs (
      '-XX:PermSize=32m',
      '-XX:+UseParallelGC',
      '-Dfile.encoding=UTF-8',
      '-XX:-UseSplitVerifier'
  )

  ignoreFailures = true
}

tasks.sonarRunner {
  dependsOn = ['coverage']
}

task wrapper(type: Wrapper) {
  gradleVersion = '2.13'
}

